src/template/snapshots/all_metrics_with_separators.snap
---
source: src/template/parse.rs
assertion_line: 115
expression: "parse(\"{gpu_temp} {gpu_usage} | {cpu_temp} {cpu_usage} | {ram_usage} | ↓{dl_speed} ↑{ul_speed} | {pub_ipv4} {pub_ipv6} | {disk_read} {disk_write}\",)"
---
Template {
    segments: [
        Variable(
            GpuTemp,
        ),
        Literal(
            " ",
        ),
        Variable(
            GpuUsage,
        ),
        Literal(
            " | ",
        ),
        Variable(
            CpuTemp,
        ),
        Literal(
            " ",
        ),
        Variable(
            CpuUsage,
        ),
        Literal(
            " | ",
        ),
        Variable(
            RamUsage,
        ),
        Literal(
            " | ↓",
        ),
        Variable(
            DlSpeed,
        ),
        Literal(
            " ↑",
        ),
        Variable(
            UlSpeed,
        ),
        Literal(
            " | ",
        ),
        Variable(
            PublicIpv4,
        ),
        Literal(
            " ",
        ),
        Variable(
            PublicIpv6,
        ),
        Literal(
            " | ",
        ),
        Variable(
            DiskRead,
        ),
        Literal(
            " ",
        ),
        Variable(
            DiskWrite,
        ),
        Literal(
            " | ",
        ),
        Variable(
            DiskUsed,
        ),
        Literal(
            " ",
        ),
        Variable(
            DiskUsage,
        ),
    ],
    requires: {
        "cpu_usage",
        "ram_usage",
        "cpu_temp",
        "gpu_temp",
        "gpu_usage",
        "dl_speed",
        "ul_speed",
        "pub_ipv4",
        "pub_ipv6",
        "disk_read",
        "disk_write",
        "disk_used",
        "disk_usage",
    },
}
