src/template/snapshots/escaped_braces.snap
---
source: src/template/parse.rs
expression: "parse(\"{{cpu_usage}}\")"
---
Template {
    segments: [
        Literal(
            "{cpu_usage}",
        ),
    ],
    requires: {},
}
