src/template/snapshots/escaped_then_variable.snap
---
source: src/template/parse.rs
expression: "parse(\"{{{cpu_usage}\")"
---
Template {
    segments: [
        Literal(
            "{",
        ),
        Variable(
            CpuUsage,
        ),
    ],
    requires: {
        "cpu_usage",
    },
}
