src/template/snapshots/minimal.snap
---
source: src/template/parse.rs
expression: "parse(\"{cpu_usage} {ram_usage}\")"
---
Template {
    segments: [
        Variable(
            CpuUsage,
        ),
        Literal(
            " ",
        ),
        Variable(
            RamUsage,
        ),
    ],
    requires: {
        "cpu_usage",
        "ram_usage",
    },
}
